--- a/composer.json
+++ b/composer.json
@@ -83,7 +83,7 @@
     ],
     "fix:php:cs": "php-cs-fixer fix --config .php_cs.php",
     "fix:php": [
-        "@fix:php:cs",
+        "@fix:php:cs"
     ],
     "docs:generate": [
       "docker run --rm t3docs/render-documentation show-shell-commands > tempfile.sh; echo 'dockrun_t3rd makehtml' >> tempfile.sh; bash tempfile.sh; rm tempfile.sh"
