[RELEASE] Prepare for version ''0.1.0''

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -10,7 +10,7 @@ project     = Demander
 # ...   (recommended) version, displayed next to title (desktop) and in <meta name="book-version"
 # .................................................................................
 
-release     = master
+release     = 0.1.0
 
 # .................................................................................
 # ...  (recommended) displayed in footer
