--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     }
   ],
   "require": {
-    "php": "^7.4",
-    "typo3/cms-core": "^10.4.6"
+    "typo3/cms-core": "^10.4.6 || ^11.5"
   },
   "require-dev": {
     "codeception/codeception": "^4.1.5",
