--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     }
   ],
   "require": {
-    "typo3/cms-core": "^10.4.6 || ^11.5"
+    "typo3/cms-core": "^10.4.6 || ^11.5 || ^12.4"
   },
   "require-dev": {
     "codeception/codeception": "^4.1.5",
